--- a/meeting_planner/website/templates/website/welcome.html
+++ b/meeting_planner/website/templates/website/welcome.html
@@ -15,9 +15,17 @@
             Django: Getting Started
         </em> on <a href="https://www.pluralsight.com">Pluralsight</a>
     </p>
-    <p>
-        There are currently {{ num_meetings }} meetings in the database.
-    </p>
+
+    <h2>Meetings</h2>
+    <ul>
+        {% for meeting in meetings %}
+            <li>
+                <a href="{% url 'detail' meeting.id %}">
+                    {{ meeting.title }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 
 </html>
